<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5fb0c9"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frameLayOutControls">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/controlesLayout"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/fecha_episodio"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:id="@+id/datePickerFechaEpisodio"></DatePicker>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/controlesLayout2"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/textViewHoraEpisodio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/hora_episodio"
                android:textColor="#fff"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timePickerHoraEpisodio"></TimePicker>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/controlesLayout3"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/textViewMedicamentosTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/medicamientos_tomando"
                android:textColor="#fff"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="8"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:hint="@string/medicamentos"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/frameLayOutControls"
        android:layout_alignParentBottom="true"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_weight="1">
        <ImageButton
            android:id="@+id/btnGrabar"
            android:background="@null"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_mic_black_24dp"
            android:layout_weight="1">
        </ImageButton>
        <!--<ImageButton
            android:id="@+id/btnStopGrabar"
            android:layout_width="70dp"
            android:layout_height="70sp"
            android:src="@drawable/ic_mic_black_24dp"
            android:layout_weight="1"
            android:background="@null"/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/frameLayOutControls"
            android:layout_alignParentBottom="true"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnAnterior"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/MyButton"
                android:textColor="#fff"
                android:text="@string/anterior"/>
            <Button
                android:id="@+id/btnSiguiente"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff"
                android:elevation="10dp"
                android:theme="@style/MyButton"
                android:text="@string/siguiente"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>